--- a/html/index.html
+++ b/html/index.html
@@ -73,6 +73,7 @@
     <div class="clr"></div>
     <footer id="main-footer">
         <p>Hotelin &copy; 2020 All Rights Reserved</p>
+        <h1>Another text added</h1>
     </footer>
 </body>
 
